<resources>
    <string name="app_name">步行者联盟</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- walk -->
    <string name="walk_weather">天气：</string>
    <string name="walk_weather_index_air">空气指数：</string>
    <string name="walk_weather_index_dress">穿衣指数：</string>
    <string name="walk_weather_index_walk">步行指数：</string>
    <string name="walk_number">步数</string>
    <string name="walk_mileage">里程</string>
    <string name="walk_action">活动：</string>
    <string name="walk_data_analysis">数据分析</string>
    <string name="walk_data_day">日</string>
    <string name="walk_data_week">周</string>
    <string name="walk_data_month">月</string>
    <string name="walk_data_year">年</string>
    <string name="walk_data_average">日平均值：</string>
    <string-array name="walk_spinner">
        <item>步数</item>
        <item>联盟排名</item>
        <item>消耗脂肪</item>
        <item>消耗蛋白质</item>
        <item>减肥指数</item>
        <item>碳减排指数</item>
        <item>幸福指数</item>
    </string-array>

    <!-- run -->
    <string name="run_pause">暂停</string>
    <string name="run_continue">继续</string>

    <!-- login -->
    <string name="login_hint_phone">请输入您的手机号</string>
    <string name="login_hint_pwd">请输入密码</string>
    <string name="login_btn_login">登录</string>
    <string name="login_register">快速注册</string>
    <string name="login_speed_login">快捷登陆</string>
    <string name="login_btn_register">注册</string>
    <string name="register_hint_phone">请输入昵称</string>
    <string name="register_login_back">返回登陆</string>

    <!--comm-->
    <string name="activity_outdate">活动已过期</string>
    <string name="publish_activity">发布活动</string>
    <string name="finish">完成</string>
    <string name="activity_main_pic">活动主图</string>
    <string name="activity_title">活动主题</string>
    <string name="activity_start_time">开始时间</string>
    <string name="activity_end_time">结束时间</string>
    <string name="activity_introduction">活动介绍</string>
    <string name="activity_select_mainpic">请选择活动主图</string>
    <string name="activity_input_title">请输入活动主题</string>
    <string name="activity_select_start">请选择活动开始时间</string>
    <string name="activity_select_end">请选择活动结束时间</string>
    <string name="activity_input_intro">请详细介绍活动的内容、目的和步行路线</string>
    <string name="activity_unoutdate">立即参加</string>
    <string name="activity_over">已结束</string>
    <string name="activity_detail">活动详情</string>
    <string name="activity_like_fail">点赞失败</string>
    <string name="activity_no">暂时没有活动</string>
    <string name="activity_no_data">暂时没有数据</string>

    <!-- found -->
    <string name="found_recommend">我要推荐</string>
    <string name="found_commend">我要吐槽</string>
    <string name="found_cancel">取消</string>

    <!--comment-->
    <string name="comment_address">地点名称：</string>
    <string name="comment_content">地点评价</string>
    <string name="comment_input_content">请描述下该地点</string>
    <string name="comment_score">路径评分</string>
    <string name="comment_streetStar">街道活力</string>
    <string name="comment_envirStar">环境舒适</string>
    <string name="comment_safeStar">步行安全</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--百度地图-->
    <string name="font_type">微软雅黑</string>
    <string name="no_track_data">未查询到轨迹</string>
</resources>
